cleanup, reduced toArray() count, progress